# chip8

./: Cargo.toml  Justfile  NOTES.md  README.md
.github/workflows/: check.yml  test.yml
crates/chip8-cli/: Cargo.toml
crates/chip8-cli/src/: main.rs
crates/chip8-interpreter/: Cargo.toml
crates/chip8-interpreter/src/: lib.rs
crates/frontend/: Cargo.toml  NOTES.md  index.html
crates/frontend/src/: main.rs
src/: lib.rs  main.rs
ui/: README.md  gleam.toml
ui/src/: libchip8_interpreter.eml  ui.gleam
