[workspace]
members = ["crates/chip8-interpreter", "crates/chip8-cli"]
resolver = "2"

[workspace.package]
authors = ["Rob Hand <146272+sinon@users.noreply.github.com>"]
version = "0.0.1"
edition = "2024"
license = "MIT"
homepage = "https://github.com/sinon/chip8"
repository = "https://github.com/sinon/chip8"
